<resources>
    <string name="app_name">Forever</string>
    <string name="facebook_app_id">230703825551952</string>
    <string name="fb_login_protocol_scheme">fb230703825551952</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="screen_1_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="done">Done</string>
    <string name="login">Login Now</string>
    <string name="emailid">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset">Reset</string>
    <string name="login_btn">Login</string>
    <string name="social_media_login">Social Media Login</string>
    <string name="if_you_are_new">If you are new/</string>
    <string name="create_one">Create One</string>
    <string name="Create_new">Create One Now</string>
    <string name="full_name">Full Name</string>
    <string name="Mobile_num">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign up</string>
    <string name="already_have">Already have one/</string>
    <string name="signin">Sign in</string>
    <string name="home">home</string>
    <string name="today">TODAY</string>
    <string name="this_week">This Week</string>
    <string name="percent">45%</string>
    <string name="points">45/100 points</string>
    <string name="for_the_week">For the week</string>
    <string name="nav_home">Home</string>
    <string name="nav_rewards">Rewards</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_user">Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="next">Next</string>
    <string name="Reset">Reset\nPassword</string>
    <string name="select_string">Enter your phone number below to reset password</string>
    <string name="via_sms">via sms:</string>
    <string name="dot">......</string>
    <string name="contact">0099</string>
    <string name="via_email">via mail:</string>
    <string name="email">ee@gmail.com</string>
    <string name="enter_code">Enter 4-digit \nrecovery code</string>
    <string name="recover_code_string">The recovery code was sent to your number. Please enter the code:</string>
    <string name="change_password">Your Password is \nreset!</string>
    <string name="terms"><![CDATA[TERMS & PRIVACY]]></string>
    <string name="terms_privacy_string">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="error">Please Select contact.</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="selec_gender">Select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non Binary</string>
    <string name="status">STATUS</string>
    <string name="explore_reward">Explore rewards</string>
    <string name="status_string">How quickly to achieve \nnext status if going at same pace</string>
    <string name="platinum">Platinum</string>
    <string name="weekly_points">3000/4500 Points</string>
    <string name="earned_points">3000 points earned this year</string>
    <string name="see_all">See all</string>
    <string name="total_step">Total Steps</string>
    <string name="totalstep">60000</string>
    <string name="total_points">Total Points</string>
    <string name="out_of">Out of 10000</string>
    <string name="point">3</string>
    <string name="txt_point">Points</string>
    <string name="active_points_calculation">This is how your activity points \nhave been calculated</string>
    <string name="steps">Steps</string>
    <string name="steps1">12000 Steps</string>
    <string name="gym_swipe">Gym Swipes</string>
    <string name="gym">Gym Swipe**</string>
    <string name="steps2">10000-11999 steps</string>
    <string name="steps3">5000-9999 Steps</string>
    <string name="points1">10 Points</string>
    <string name="points2">5 Points</string>
    <string name="points3">3 points</string>
    <string name="food">Healthy food</string>
    <string name="food1">$50 healthy food spend</string>
    <string name="food2">$100 healthy food spend</string>
    <string name="heart1">60 Min workout at 60% max heart rate for age</string>
    <string name="heart2">30 min workout at 70% max heart rate for age</string>
    <string name="heart3">30 min workout at 60% max heart rate for age</string>
    <string name="activity_summary">Activity Summary</string>
    <string name="Today">Today</string>
    <string name="weekday">Tuesday</string>
    <string name="Highlights">Highlights</string>
    <string name="promotion_string">You\'re taking fewer steps than you usually do by now.</string>
    <string name="activity_points">Activity Points</string>
    <string name="profile_completion">Profile Completion</string>
    <string name="points_summary">Points Summary</string>
    <string name="activity">Activity</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="sign_up">SIGN UP</string>
    <string name="location">Location</string>
    <string name="search_location">Search your location...</string>
    <string name="age">Age</string>
    <string name="tell_your_age">Please tell us your age</string>
    <string name="joining_date">Feb, 2020</string>
    <string name="member_since">Member Since</string>
    <string name="profile">Profile</string>
    <string name="user_name">Smith Julian</string>
    <string name="user_email">smithjulian@abc.com</string>
    <string name="user_contact">| +918080808080</string>
    <string name="txt_age">26</string>
    <string name="txt_location">Paris</string>
    <string name="point_profile">3.5/5 Points</string>
    <string name="profile_reward">Complete profile for more rewards</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="gold">Gold</string>
    <string name="view_detail">View Details</string>
    <string name="txt_points">2100</string>
    <string name="view_history">View History</string>
    <string name="redeemed">Redeemed</string>
    <string name="redeem">Redeem</string>
    <string name="txt_redeemed">900</string>
    <string name="redeemed_history">Redeemed Hostory</string>
    <string name="share">Share with Friends</string>
    <string name="more_reward">Earn more rewards</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="txt_user_name">User name</string>
    <string name="device_type"> a </string>
    <string name="tocken">f1tmwBMuEwo:APA91bHBeF_X0MBCn-wtKhg4OvckXxNvoKk1vmhYzuCoGiZtlZOPXyJGcPDJPetCW0VMiV2UXZzEM89LesSbwdV9e-yiRIQH8JNJn1mkdPiH2G6Fj37CBu8wrZeuogcztp9qe-6a_Ubb</string>
    <string name="rewards">Rewards</string>
    <string name="search">Search...</string>
    <string name="new_arrival">New Arrivals</string>
    <string name="demo_string">Lorem Ipsum is simply dummy \ntext of the printing.</string>
    <string name="expired">Expired</string>
    <string name="date">Feb 22, 2021</string>
    <string name="terms_apply"><![CDATA[Terms & Condition Apply]]></string>
    <string name="txt_share">Share</string>
    <string name="txt_Discount">Discount</string>
    <string name="txt_Price">Price</string>
    <string name="offer_details">OFFER DETAILS</string>
    <string name="privacy">Privacy &amp; Policy</string>
    <string name="recommended">Recommended</string>
    <string name="sport">Sport Shoes</string>
    <string name="spend_time">45m ago</string>
    <string name="notification_title">This Deal is truly unreal.</string>
    <string name="notification_offer">Buy 1 style, get 2 free - 1 hour only!</string>
    <string name="empty_rewards_string">Sorry, this is not an active partner at this present time. Please try searching again or choose from the list of rewards.</string>
    <string name="reload">Reload</string>
    <string name="search_by_loaction">Search by location</string>
    <string name="see_more">See more</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="more">More</string>
    <string name="prefrence">Preferences</string>
    <string name="terms_privacy_txt"><![CDATA[Terms & Privacy]]></string>
    <string name="help_center">Help Center</string>
    <string name="about">About</string>
    <string name="invition_txt"><u>Invite friends and earn rewards
    </u></string>
    <string name="logout">Log out</string>
    <string name="version">2.2 Version</string>
    <string name="aboutus">About us</string>
    <string name="fullname">Full Name*</string>
    <string name="issue">Issue</string>
    <string name="detail">Describe your issue in detail*</string>
    <string name="send">Send</string>
    <string name="distance">Distance</string>
    <string name="km">km</string>
    <string name="language">Language</string>
    <string name="eng">ENG</string>
    <string name="notification">Notifications</string>
    <string name="reminder">Reminder</string>
    <string name="txt_time">Time</string>
    <string name="time">9:45 AM</string>
    <string name="daily_goals">Daily Goal (Step)</string>
    <string name="step">150</string>
    <string name="general_reminder">General Reminder</string>
    <string name="upload_receipts">Upload receipts</string>
    <string name="category">Category</string>
    <string name="healthy_food">Healthy Food</string>
    <string name="amount_spent">Amount you spend</string>
    <string name="thb">100 THB</string>
    <string name="attached_document">Attach Documents</string>
    <string name="browse_file">Browse files</string>
    <string name="secure">Secure</string>
    <string name="open_camera">Open Camera</string>
    <string name="filter">Filter</string>
    <string name="custom_date">Custom Date</string>
    <string name="date_to">Tuesday, Feb 22, 2021</string>
    <string name="date_from">- Tuesday, Feb 23, 2021</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last 12 Months</string>
    <string name="txt_date_from">Feb 22, 2021</string>
    <string name="to">To</string>
    <string name="no_points">You currently have no activity points to nreport. Stay active to earn rewards!</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="max_10_days">Max 10 a day</string>
    <string name="healthy_eating">Healthy Eating</string>
    <string name="unlimited">Unlimited</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="gym_visit">Gym Visit</string>
    <string name="food_and_drink"><![CDATA[Healthy food & \ndrink spend]]></string>
    <string name="points4">1 Point per 100 THB</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="max_5_days">Max 5 a day</string>
    <string name="spa_message"><![CDATA[Spa & Massage]]></string>
    <string name="sleep">Sleep</string>
    <string name="activity_detail">Activity Detail</string>
    <string name="mileStone">6000/10000</string>
    <string name="next_milestone">Next milestone</string>
    <string name="milestone_txt">12000</string>
    <string name="completed">Completed</string>
</resources>