<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/header_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10">

        <ImageView
            android:id="@+id/level_badge"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            app:elevation="@dimen/dp20"
            android:layout_margin="@dimen/dp20"
            android:src="@drawable/ic_badge_level" />


        <TextView
            android:id="@+id/txt_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp20"
            android:padding="@dimen/dp10"
            android:text="@string/today"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_sp18" />

        <ImageView
            android:id="@+id/share_btn"
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp30"
            android:src="@drawable/ic_share" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
       >


        <ImageView
            android:layout_width="@dimen/dp320"
            android:layout_height="@dimen/dp320"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_heart" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp100"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_this_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/this_week"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_sp8" />

            <TextView
                android:id="@+id/txt_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_sp32" />

            <TextView
                android:id="@+id/txt_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/points"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_sp12" />

            <TextView
                android:id="@+id/txt_for_the_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/for_the_week"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_sp12" />

        </LinearLayout>

    </RelativeLayout>





</RelativeLayout>