<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.reward.SearchByLocationFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/back_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dp20">

        <RelativeLayout
            android:id="@+id/header_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp70">


            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp30"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/txt_offer_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search_by_loaction"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_sp18"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp450" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_below="@id/map_view"
        android:background="@color/non_binary" />


    <RelativeLayout
        android:id="@+id/txt_rewards_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp30">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rewards"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_sp18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/see_all"
            android:textColor="@color/dotcolor"
            android:textSize="@dimen/textsize_sp16" />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rewards_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txt_rewards_rl"
        android:layout_margin="@dimen/dp10" />


</RelativeLayout>